# cli2

./: CLAUDE.md  README.md  calculator.html
.opencode/: .gitignore  workspace.json
opencode-py/: .gitignore  README.md  iai.md  pyproject.toml
opencode-py/docs/: INIT.md  LLM_CONFIG.md
opencode-py/src/opencode/: __init__.py  classifier.py  cli.py  complexity.py  config.py  exploration.py  git.py  mode.py  permissions.py  session.py  style.py  tracker.py  workspace.py
opencode-py/src/opencode/llm/: __init__.py  anthropic.py  base.py  openai.py  parser.py
opencode-py/src/opencode/tools/: __init__.py  base.py  bash.py  edit.py  find_definition.py  find_references.py  find_symbols.py  glob.py  grep.py  outline.py  read.py  registry.py  rename_symbol.py  tree.py  write.py
opencode-py/tests/: __init__.py  conftest.py  test_config.py  test_config_advanced.py  test_document_reading.py  test_exploration.py  test_language_detection.py  test_llm.py  test_mode.py  test_parser.py  test_plan_mode.py  test_review_phases.py  test_tools.py  test_workspace.py
